--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@ cache/
 files/
 sites/*/files
 sites/*/private
-
-# Ignore default text files
-robots.txt
+includes/
+misc/
+modules/
+profiles/
+scripts/
+themes/
 /CHANGELOG.txt
 /COPYRIGHT.txt
 /INSTALL*.txt
@@ -16,11 +19,6 @@ robots.txt
 /MAINTAINERS.txt
 /UPGRADE.txt
 /README.txt
-sites/all/README.txt
-sites/all/modules/README.txt
-sites/all/themes/README.txt
-
-# Ignore everything but the "sites" folder ( for non core developer )
 .htaccess
 web.config
 authorize.php
@@ -29,10 +27,5 @@ index.php
 install.php
 update.php
 xmlrpc.php
-/includes
-/misc
-/modules
-/profiles
-/scripts
-/themes
-/.idea
+robots.txt
+
